--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -11,9 +11,9 @@
     <string name="no_intent_handler_found">Bu eylemi gerçekleştirecek uygulama bulunamadı</string>
     <string name="network_interface">Arayüz</string>
     <string name="can_use_purchased_feature">Artık satın alınan özelliği kullanabilirsiniz</string>
-    <string name="disconnect_vpn_confirm">Etkin VPN uygulamasının bağlantısını kesip devam edilsin mi\?</string>
+    <string name="disconnect_vpn_confirm">Devam edildiğinde etkin VPN bağlantısı kesilecektir</string>
     <string name="http_server">HTTP sunucusu</string>
-    <string name="system_default">Sistem</string>
+    <string name="system_default">Sistem öntanımlı değeri</string>
     <string name="ip_address_val">IP adresi: %1$s</string>
     <string name="start_button">Başla</string>
     <string name="protocol">Protokol</string>
@@ -27,7 +27,6 @@
     <string name="rcvd_and_sent">%1$s alındı — %2$s gönderildi</string>
     <string name="query">Sorgu</string>
     <string name="host">Ana makine</string>
-    <string name="app_filter">Hedef uygulama</string>
     <string name="ready">Hazır</string>
     <string name="connections_view">Bağlantılar</string>
     <string name="no_connections">Bağlantı yok</string>
@@ -151,7 +150,7 @@
     <string name="packets">Paketler</string>
     <string name="receiver_ip_address">Toplayıcı IP adresi</string>
     <string name="yes">Evet</string>
-    <string name="vpn_setup_failed">VPN kurulamadı</string>
+    <string name="vpn_setup_failed">VPN kurulamadı. Her zaman açık VPN\'in devre dışı bırakıldığından emin olun</string>
     <string name="app_not_found">%1$s uygulaması bulunamadı</string>
     <string name="source">Kaynak</string>
     <string name="receiver_port">Toplayıcı bağlantı noktası</string>
@@ -167,7 +166,6 @@
     <string name="conn_status_unreachable">Ulaşılamıyor</string>
     <string name="file_saved_with_name">Dosya \"%1$s\" olarak kaydedildi</string>
     <string name="enable_socks5_proxy_summary">Tüm TCP bağlantılarını bir SOCKS5 vekiline yönlendir</string>
-    <string name="proxy_ip_address">Vekil IP adresi</string>
     <string name="protocol_val">Protokol: %1$s</string>
     <string name="android_app_info">Android sistemi</string>
     <string name="capture_prefs">Yakala</string>
@@ -177,7 +175,7 @@
     <string name="edit_list">Listeyi düzenle</string>
     <string name="status_uptodate">Güncel</string>
     <string name="private_dns_hinders_detection">Gizli DNS algılamayı engelliyor</string>
-    <string name="decryption_no_filter_warn">İnternet bağlantınızı kaybetmemek için TLS\'nin şifresini çözerken bir hedef uygulama seçin veya şifre çözme beyaz listesini kullanın</string>
+    <string name="decryption_no_filter_warn">İnternet bağlantınızı kaybetmemek için TLS\'nin şifresini çözerken bir hedef uygulama seçin</string>
     <string name="paid_features">Ücretli özellikler</string>
     <string name="interface_filter">Arayüz: %1$s</string>
     <string name="purchased">Satın alındı</string>
@@ -223,11 +221,10 @@
     <string name="cert_exported_now_installed">Sertifika dışa aktarıldı, şimdi Android ayarlarından onu kurun</string>
     <string name="cert_installed_correctly">CA sertifikası kuruldu</string>
     <string name="mitm_addon_bad_version">Hatalı PCAPdroid ortadaki adam eklentisi sürümü. Lütfen %1$s sürümünü yükleyin ve tekrar deneyin</string>
-    <string name="mitm_addon_new_version">PCAPdroid ortadaki adam eklentisi yükseltilmelidir</string>
-    <string name="upgrade_action">Yükselt</string>
+    <string name="mitm_addon_new_version">PCAPdroid ortadaki adam eklentisi güncellenmelidir</string>
     <string name="request">İstek</string>
     <string name="overview">Genel bakış</string>
-    <string name="payload_truncated">Yükün bir kısmı gösteriliyor. Tamamını göstermek için \"%1$s\" etkinleştirin</string>
+    <string name="payload_truncated">Yükün bir kısmı gösteriliyor. Tam olarak göstermek için yakalamayı durdurun ve PCAPdroid ayarlarından \"%1$s\" seçeneğini etkinleştirin</string>
     <string name="http">HTTP</string>
     <string name="payload">Yük</string>
     <string name="tx_direction">Gönder (TX)</string>
@@ -258,7 +255,6 @@
     <string name="phone_app">Telefon</string>
     <string name="socks5_proxy">SOCKS5</string>
     <string name="phone_app_info">Telefon hizmetleri</string>
-    <string name="configure_action">Yapılandır</string>
     <string name="install_ca_certificate">\"VPN ve uygulamalar\" seçeneğini seçerek PCAPdroid CA sertifikasını kurun. Android, kilit ekranınızı veya parolanızı soracak</string>
     <string name="tls_decryption_summary">Ortadaki adam gerçekleştirerek SSL/TLS trafiğinin şifresini çöz. Bu artık bazı uygulamalarla çalışabilir, kullanım kılavuzuna bakın</string>
     <string name="traffic_inspection">Trafik denetimi</string>
@@ -296,7 +292,6 @@
     <string name="firewall_is_enabled">Güvenlik duvarı etkin</string>
     <string name="firewall_summary">Uygulamalara internet erişimini engelleyin, belirli etki alanları ve IP adresleri için kurallar yapılandırın. Yalnızca root olmayan yakalama ile çalışır</string>
     <string name="block_quick">QUIC\'i engelle</string>
-    <string name="block_quick_summary">Muhtemelen şifresi çözülebilir TLS\'ye geri dönmek için QUIC bağlantılarını engelleyin. Bazı uygulamalar çalışmayı durdurabilir</string>
     <string name="block_private_dns_summary">DNS trafiğini incelemek için özel DNS\'yi algılayın ve muhtemelen engelleyin. Bunu devre dışı bırakmak trafik incelemesini engelleyebilir</string>
     <string name="mitm_setup_wizard_done">PCAPdroid artık TLS trafiğinin şifresini çözmeye hazır
 \n
@@ -307,7 +302,9 @@
     <string name="privacy_first">Önce gizlilik</string>
     <string name="vpn_setup_msg">PCAPdroid, ağ trafiğini root olmadan yakalamak için bir VPN gibi davranır.
 \n
-\nYakalamayı başlatmak için, bir sonraki ekranda VPN isteğini kabul etmeniz gerekir</string>
+\nYakalamayı başlatmak için, bir sonraki ekranda VPN isteğini kabul etmeniz gerekir.
+\n
+\n<b>NOT:</b> Devam etmek için, Android ayarlarından yapılandırılmış her zaman açık VPN\'lerin tümünü devre dışı bırakın</string>
     <string name="app_intro_firewall_msg">Tümleşik <a href="%1$s">güvenlik duvarı</a> ile tek tek uygulamalara ve etki alanlarına internet erişimini kolayca engelleyebilirsiniz
 \n
 \nBunu yerleşik trafik görünürlüğü ile birleştirerek gizliliğinizi korumak için en iyi aracı elde edin</string>
@@ -465,4 +462,49 @@
     <string name="decryption_rules_help">Bu kurallar hangi bağlantıların şifresinin çözüleceğini belirtir. Ana makine tabanlı kurallar yalnızca önceden bir DNS yanıtı görülürse çalışır</string>
     <string name="decrypt_action">Şifresini çöz…</string>
     <string name="status_encrypted">Şifreli</string>
+    <string name="host_resolution_failed">%1$s adresi çözümlenemedi</string>
+    <string name="pcap_file_load_aborted">PCAP dosyası yükleme işlemi iptal edildi</string>
+    <string name="tls_decryption_no_rules_notice">TLS şifre çözme yalnızca yapılandırılan kurallarla eşleşen bağlantılara uygulanır. Şimdi şifre çözme kuralları oluşturmak istiyor musunuz\?</string>
+    <string name="pcap_load_success">PCAP dosyası yüklendi</string>
+    <string name="unsupported_pcap_datalink">PCAP dosyası desteklenmeyen bir veri bağlantısına sahip</string>
+    <string name="pcap_file_not_exists">Belirtilen PCAP dosyası yok</string>
+    <string name="root_capture_start_failed">Yakalama başlatma hatası. Aygıtın Magisk ile root yapıldığından emin olun</string>
+    <string name="decryption_info_no_rule">Bu bağlantının şifresi çözülmeyecek. Şifresini çözmek için bir şifre çözme kuralı oluşturun</string>
+    <string name="pcap_read_error">PCAP okuma hatası</string>
+    <string name="active_vpn_detected">Etkin VPN algılandı</string>
+    <string name="pcap_load_in_progress">PCAP dosyası yükleniyor, lütfen bekleyin</string>
+    <string name="pcapdroid_trailer_notice">\"%1$s\" yerine gerçek uygulamaları göstermek için, PCAP dosyasını dışa aktarmadan önce \"%2$s\" seçeneğini etkinleştirdiğinizden emin olun</string>
+    <string name="copy_error">Dosya yazılamadı</string>
+    <string name="open_pcap_file">PCAP dosyasını aç…</string>
+    <string name="root_capture_pcapd_start_failure">Yakalama başlatma hatası. PCAPdroid\'e root erişimi verdiğinizden emin olun</string>
+    <string name="invalid_pcap_file">Geçersiz PCAP dosyası</string>
+    <string name="proxy_host">Vekil sunucu</string>
+    <string name="capture_interface_open_error">Yakalama arayüzü açılamadı</string>
+    <string name="dnscrypt_how_to">PCAPdroid ile DoH / DNSCrypt nasıl kullanılır</string>
+    <string name="never">Hiçbir zaman</string>
+    <string name="always">Her zaman</string>
+    <string name="for_connections_to_decrypt">Yalnızca şifresi çözülecek bağlantılar için</string>
+    <string name="whats_new">Yenilikler</string>
+    <string name="export_ellipsis">Dışa aktar…</string>
+    <string name="mitm_doze_notice">Pil iyileştirmesi ortadaki adam eklentisinin çalışmasını engelleyebilir</string>
+    <string name="redirected">yönlendirildi</string>
+    <string name="connection_redirected_port_map">Bu bağlantı bir bağlantı noktası eşleme kuralı nedeniyle yönlendirildi</string>
+    <string name="both">Her ikisi de</string>
+    <string name="decrypt_quic_notice">QUIC şifresinin çözülmesi şu anda desteklenmiyor. Geçici bir çözüm olarak, yakalamayı durdurun ve PCAPdroid ayarlarında QUIC engelleme seçeneğini seçin</string>
+    <string name="target_apps">Hedef uygulamalar</string>
+    <string name="target_apps_help">Yakalanacak uygulamaları seçin</string>
+    <string name="headers">Başlıklar</string>
+    <string name="body">Gövde</string>
+    <string name="raw_bytes">Ham baytlar</string>
+    <string name="restart_on_disconnection">Bağlantı kesildiğinde yeniden başlat</string>
+    <string name="vpn_reconnection">VPN yeniden bağlantısı</string>
+    <string name="vpn_reconnection_aborted">VPN yeniden bağlantısı iptal edildi</string>
+    <string name="waiting_for_vpn_disconnect">Etkin VPN bağlantısının kesilmesi bekleniyor…</string>
+    <string name="restart_on_disconnection_summary">Diğer VPN uygulamaları tarafından durdurulduktan sonra yakalamayı otomatik olarak yeniden başlat</string>
+    <string name="ipv6_bytes_sent">Gönderilen IPv6 bayt</string>
+    <string name="ipv6_bytes_percentage">IPv6 bayt yüzdesi</string>
+    <string name="ipv6_bytes_rcvd">Alınan IPv6 bayt</string>
+    <string name="update_available">Güncelleme var</string>
+    <string name="mitm_addon_update_available">Yeni bir ortadaki adam eklentisi güncellemesi var. En son hata düzeltmelerini almak için güncelleyin</string>
+    <string name="update_action">Güncelle</string>
 </resources>
