--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -383,7 +383,7 @@
     <string name="ipv6_only">IPv6 only</string>
     <string name="ip_both">IPv4 and IPv6</string>
     <string name="notifications_notice">The app uses notifications to send alerts in case of anomalous events. Grant it the permission to send notifications in the next screen</string>
-    <string name="vpn_exemptions">VPN Exemptions</string>
+    <string name="vpn_exemptions">VPN exemptions</string>
     <string name="vpn_exemptions_summary">Exempt some apps from the VPN connection. Their traffic will not be monitored</string>
     <string name="no_matches_found">No matches</string>
     <string name="cleartext_connection">Cleartext</string>
